<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CCH_Android</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="staff_id_field">Staff_ID</string>
    <string name="forgotten_password_field">Forgotten Password</string>
    <string name="sign_up_field">Sign up</string>
    <string name="staff_id_title">Staff ID</string>
    <string name="password_title">Password</string>
    <string name="error_no_password">Please enter a passwordS</string>
    <string name="error_no_staff_id">Please Enter a Staff ID</string>
    <string name="error_password_combination">Please enter correct Id and password combination</string>
    <string name="password_title_again">Password Again</string>
    <string name="error_no_match">please make sure the password match</string>
    <string name="error_Id_in_use">Staff ID already exists</string>
    <string name="profile_first_name_title">Frst Name</string>
    <string name="profile_lastname_title">Last Name</string>
    <string name="profile_facilityid_title">Facility ID</string>
    <string name="profile_password_title">Password</string>
    <string name="profile_passwordagain_title">Password Again</string>
    <string name="profile_imei_title">IMEI</string>
    <string name="profile_number_title">Phone Number</string>
    <string name="profile_secreteQuestion_title">Secret Question</string>
    <string-array name="qstn_array">
        <item>What is the name of your Father?</item>
        <item>What is the name of your pet?</item>
        <item>What is the name of your Spouse?</item>        
    </string-array>
    <string name="profile_answer_title">answer</string>
    <string name="profile_masterpassword_title">Master Password</string>
    <string name="profile_btn_text">Enter</string>
    <string name="profile_type_title">Enter Type</string>    
    <string-array name="type_array">
        <item>CHO</item>
        <item>CHN</item>        
    </string-array>
    <string name="profile_supervisor_title">Are you a Supervisor</string>    
    <string-array name="supervisor_array">
        <item>YES</item>
        <item>No</item>        
    </string-array>
    <string name="error_fields_not_filled">Please make sure all fields are filled</string>
    <string name="profile_staffId_title">Staff ID</string>
    <string name="error_id_use">Staff ID is already in use</string>
    <string name="reset_title">Reset</string>
    <string name="new_password_Again_title">New Password Again</string>
    <string name="reset_new_password_title">New Password</string>
    <string name="reset_old_password_title">Old Password</string>
    <string name="reset_staff_id_title">Staff ID</string>
    <string name="hello">Hello</string>
    
</resources>
