<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/staff_id_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         android:text = "@string/staff_id_title"
        android:ems="10" />

    <EditText
        android:id="@+id/staff_id_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/password_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="@string/password_title" />

    <EditText
        android:id="@+id/password_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword" />
    
     <TextView
        android:id="@+id/password_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="@string/password_title_again" />
     
     <EditText
        android:id="@+id/password_field_again"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword" />
    
     <Button
                android:id="@+id/register_btn"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:onClick="onSignUpClick"
                android:text="@string/sign_up_field"/>

</LinearLayout>
